# backchannel_detection

./: test.launch
bundler/: CMakeLists.txt  package.xml
bundler/msg/: Bundle.msg
bundler/scripts/: bundle.py
central/scripts/: go.py
feature_extraction/audio_features_detection/: CMakeLists.txt  package.xml
feature_extraction/audio_features_detection/scripts/: audio_features.py
feature_extraction/gaze_detection/: CMakeLists.txt  package.xml
feature_extraction/gaze_detection/msg/: GazeFeatures.msg
feature_extraction/gaze_detection/scripts/: config.py  gaze_features.py  gaze_objects.py
model/scripts/: tocsv.py
